fixed z-index for user overlay

--- a/src/application/_less/application.less
+++ b/src/application/_less/application.less
@@ -17,6 +17,7 @@ body {
     height: 100%;
     background-color: #000;
     opacity: .25;
+    z-index: 1000;
 }
 
 
@@ -64,6 +65,7 @@ header {
         right: 0;
         width: 350px;
         padding: 10px;
+        z-index: 2000;
 
         strong {
             font-size: 16px;
@@ -138,11 +140,7 @@ header {
 }
 
 input[type=text] {
-	border-bottom: 1px solid #000;
-	border-top: none;
-	border-left: none;
 	border-right: none;
-	outline: none;
 }
 
 #chapterlist {
